{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 10,
  "lineage": "c955fb9a-40d6-593e-5749-8e3aa07b9f3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459477751343:internet-gateway/igw-040d58aab3cd93adc",
            "id": "igw-040d58aab3cd93adc",
            "owner_id": "459477751343",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-058cae9039d4d50e0"
          },
          "dependencies": [
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-040d58aab3cd93adc",
            "id": "r-rtb-0c6da35d862894f831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c6da35d862894f83",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_internet_gateway",
            "aws_route_table.dev_public_rt",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459477751343:route-table/rtb-0c6da35d862894f83",
            "id": "rtb-0c6da35d862894f83",
            "owner_id": "459477751343",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040d58aab3cd93adc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_public_rt"
            },
            "tags_all": {
              "Name": "dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-058cae9039d4d50e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78beb12221d2cbb",
            "route_table_id": "rtb-0c6da35d862894f83",
            "subnet_id": "subnet-0e4da61efffa3e14c"
          },
          "dependencies": [
            "aws_route_table.dev_public_rt",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459477751343:subnet/subnet-0e4da61efffa3e14c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.155.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4da61efffa3e14c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459477751343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_public"
            },
            "tags_all": {
              "Name": "dev_public"
            },
            "vpc_id": "vpc-058cae9039d4d50e0"
          },
          "dependencies": [
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459477751343:vpc/vpc-058cae9039d4d50e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.155.0.0/16",
            "default_network_acl_id": "acl-09ffedfb5cf547ba4",
            "default_route_table_id": "rtb-009d2cb7687c1c863",
            "default_security_group_id": "sg-0da1ecdce7116a9d7",
            "dhcp_options_id": "dopt-0fc899e18237bd592",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058cae9039d4d50e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009d2cb7687c1c863",
            "owner_id": "459477751343",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}